force-app/main/default/objects/Data_Summary_Field__c/Data_Summary_Field__c.object-meta.xml
<CustomObject>
    <label>Data Summary Field</label>
    <nameField>
        <displayFormat>dsf-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Summary Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>