force-app/main/default/objects/Data_Summary_Field__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This acts as an on/off switch allowing you to control which field summarizations are to be used.When you click Run Summary Now, only the active fields will be processed</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>