force-app/main/default/objects/Data_Summary_Field__c/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <formula>if (!isblank(Summary__r.Child_Object__c), Summary__r.Child_Object__c, Summary__r.Parent_Object__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Child Object, as set on the Summary Task</inlineHelpText>
    <label>Child Object (as set on the task)</label>
    <type>Text</type>
</CustomField>