force-app/main/default/objects/Data_Summary_Field__c/fields/Field_Status__c.field-meta.xml
<CustomField>
    <fullName>Field_Status__c</fullName>
    <formula>if ( Active__c
&amp;&amp; !isblank(text(How_to_Summarize__c))
&amp;&amp; !isblank(Source_Field__c)
&amp;&amp; !isblank(Target_Field__c)
&amp;&amp; ( CONTAINS(Source_Field__c, &apos;.&apos;) || isblank(Source_Field_Type__c) || (!CONTAINS(lower(Source_Field_Type__c), &apos;object&apos;)
&amp;&amp; !CONTAINS(lower(Target_Field_Type__c), &apos;object&apos;) ))
&amp;&amp; ( Source_Field_Type__c = Target_Field_Type__c 
|| ( text(How_to_Summarize__c) = &apos;Count&apos; &amp;&amp; (  Target_Field_Type__c = &apos;Currency&apos; ||   Target_Field_Type__c = &apos;Double&apos;) )
|| ( (Source_Field_Type__c = &apos;Currency&apos; || Source_Field_Type__c = &apos;Double&apos; ) &amp;&amp; (Target_Field_Type__c = &apos;Currency&apos; || Target_Field_Type__c = &apos;Double&apos; )  )
), &apos;Ready&apos;,

if(!Active__c, &apos;Not Active&apos; +br(), &apos;&apos;)
+ if (isblank(text(How_to_Summarize__c)), &apos;No Summarization Selected&apos; +br(), &apos;&apos;)
+ if (isblank(Source_Field__c), &apos;Needs Source Field&apos; +br(), &apos;&apos;)
+ if (isblank(Target_Field__c), &apos;Needs Target Field&apos; +br(), &apos;&apos;)
+ if (CONTAINS(lower(Source_Field_Type__c), &apos;object&apos;) , Source_Field_Type__c +br(), &apos;&apos;)
+ if (CONTAINS(lower(Target_Field_Type__c), &apos;object&apos;) , Target_Field_Type__c +br(), &apos;&apos;)
+ if ( text(How_to_Summarize__c) = &apos;Count&apos; &amp;&amp;  Target_Field_Type__c != &apos;Currency&apos; &amp;&amp;  Target_Field_Type__c != &apos;Double&apos;, &apos;Target field type not compatible with Count action&apos;, 
 if (Source_Field_Type__c != Target_Field_Type__c, &quot;Source and Target field types don&apos;t match&quot;, &apos;&apos;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A summary of any issues with the configuration of the field.  If all is good, it&apos;ll show &quot;Ready&quot;</inlineHelpText>
    <label>Field Status</label>
    <type>Text</type>
</CustomField>