force-app/main/default/objects/Data_Summary_Field__c/fields/How_to_Null__c.field-meta.xml
<CustomField>
    <fullName>How_to_Null__c</fullName>
    <formula>if ( isblank(Target_Field_Type__c), &apos;&apos;, 
Case (Target_Field_Type__c,
&apos;Integer&apos;, &apos;Zero&apos;,
&apos;Double&apos;, &apos;Zero&apos;,
&apos;Decimal&apos;, &apos;Zero&apos;,
&apos;String&apos;, &apos;Blank&apos;,
&apos;Null&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How to Null</label>
    <type>Text</type>
</CustomField>