force-app/main/default/objects/Data_Summary_Field__c/fields/How_to_Summarize__c.field-meta.xml
<CustomField>
    <fullName>How_to_Summarize__c</fullName>
    <inlineHelpText>How you’d like the data summarized</inlineHelpText>
    <label>How to Summarize</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>count</fullName>
            </value>
            <value>
                <fullName>sum</fullName>
            </value>
            <value>
                <fullName>min</fullName>
            </value>
            <value>
                <fullName>max</fullName>
            </value>
            <value>
                <fullName>average</fullName>
            </value>
            <value>
                <fullName>oldest value</fullName>
            </value>
            <value>
                <fullName>newest value</fullName>
            </value>
            <value>
                <fullName>copy (including blanks)</fullName>
            </value>
            <value>
                <fullName>copy (only non-blank)</fullName>
            </value>
            <value>
                <fullName>Count Unique Values</fullName>
            </value>
            <value>
                <fullName>Count Unique Values (ignore case)</fullName>
            </value>
            <value>
                <fullName>Median</fullName>
            </value>
            <value>
                <fullName>Standard Deviation (population)</fullName>
            </value>
            <value>
                <fullName>Standard Deviation (sample)</fullName>
            </value>
            <value>
                <fullName>List Unique Values</fullName>
            </value>
            <value>
                <fullName>List Unique Values (ignore case)</fullName>
            </value>
            <value>
                <fullName>Set Specific Value</fullName>
                <isActive>false</isActive>
                <label>Set Specific Value</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>