force-app/main/default/objects/Data_Summary_Field__c/fields/Null__c.field-meta.xml
<CustomField>
    <fullName>Null__c</fullName>
    <label>How to Null</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zero</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>