force-app/main/default/objects/Data_Summary_Field__c/fields/Reset_Value_After_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Reset_Value_After_Snapshot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset Value After Snapshot</label>
    <type>Checkbox</type>
</CustomField>