force-app/main/default/objects/Data_Summary_Field__c/fields/Snapshot_Field__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Field__c</fullName>
    <label>Snapshot Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>