force-app/main/default/objects/Data_Summary_Field__c/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field (on Child)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>