force-app/main/default/objects/Data_Summary_Field__c/fields/Source_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_Type__c</fullName>
    <label>Source Field Type (raw)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>