force-app/main/default/objects/Data_Summary_Field__c/fields/Source_Field_Type_display__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_Type_display__c</fullName>
    <formula>Source_Field_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The datatype of the selected source field, or an error message (automatic)</inlineHelpText>
    <label>Source Field Type</label>
    <type>Text</type>
</CustomField>