force-app/main/default/objects/Data_Summary_Field__c/fields/Specific_Value_to_Set__c.field-meta.xml
<CustomField>
    <fullName>Specific_Value_to_Set__c</fullName>
    <label>Specific Value to Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>