force-app/main/default/objects/Data_Summary_Field__c/fields/Summarize_To_Object__c.field-meta.xml
<CustomField>
    <fullName>Summarize_To_Object__c</fullName>
    <formula>if ( Summary__r.Snapshot_Mode__c = true, Summary__r.Snapshot_Object__c , Summary__r.Parent_Object__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summarizing To (Object)</label>
    <type>Text</type>
</CustomField>