force-app/main/default/objects/Data_Summary_Field__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary Task</label>
    <referenceTo>Data_Summary__c</referenceTo>
    <relationshipLabel>Data Summary Fields</relationshipLabel>
    <relationshipName>Data_Summary_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>