force-app/main/default/objects/Data_Summary_Field__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <inlineHelpText>The field where the analysis will be stored</inlineHelpText>
    <label>Summarize To (Target Field)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>