force-app/main/default/objects/Data_Summary_Field__c/fields/Target_Field_Type_display__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_Type_display__c</fullName>
    <formula>Target_Field_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The datatype of the selected target field, or an error message (automatic)</inlineHelpText>
    <label>Target Field Type</label>
    <type>Text</type>
</CustomField>