force-app/main/default/objects/Data_Summary_Field__c/validationRules/Oldest_Newest_Requires_Child_Object_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Oldest_Newest_Requires_Child_Object_Date</fullName>
    <active>true</active>
    <description>The field Date_Field_on_Child_Record__c is required when the summary action is oldest or newest value</description>
    <errorConditionFormula>isblank(Summary__r.Date_Field_on_Child_Record__c) &amp;&amp;
(text(How_to_Summarize__c) = &apos;oldest value&apos; || text(How_to_Summarize__c) = &apos;newest value&apos; )</errorConditionFormula>
    <errorDisplayField>How_to_Summarize__c</errorDisplayField>
    <errorMessage>The field Date Field on Child Record on Data Summary record needs to be set before you can select this option.</errorMessage>
</ValidationRule>