force-app/main/default/objects/Data_Summary_Field__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Source_Field__c</columns>
    <columns>Target_Field__c</columns>
    <columns>How_to_Summarize__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>